# ProjectData

./: CMakeLists.txt  Widget.h  main.cpp  工程树设计类.drawio
itemData/: AnalysisPlanData.cpp  AnalysisPlanData.h  AnalysisResultData.cpp  AnalysisResultData.h  BoundaryContainerData.cpp  BoundaryContainerData.h  FieldDiagramData.cpp  FieldDiagramData.h  GraphData.cpp  GraphData.h  IncentiveContainerData.cpp  IncentiveContainerData.h  IncentiveData.cpp  IncentiveData.h  InitializationData.cpp  InitializationData.h  MaterialData.cpp  MaterialData.h  MotionAreaContainerData.cpp  MotionAreaContainerData.h  MotionAreaData.cpp  MotionAreaData.h  ParameterizedResultsData.cpp  ParameterizedResultsData.h  ParametricData.cpp  ParametricData.h  ParametricSettingsData.cpp  ParametricSettingsData.h  PermanentMagnetSyncMotorProjectData.cpp  PermanentMagnetSyncMotorProjectData.h  ProjectContainerData.cpp  ProjectContainerData.h  SolveSettingsData.cpp  SolveSettingsData.h  StatorRotorData.cpp  StatorRotorData.h  StructureData.cpp  StructureData.h  SymmetricBoundaryData.cpp  SymmetricBoundaryData.h  (+4 more)
tree/: TreeItem.h  TreeModel.h  TreeView.cpp  TreeView.h
